Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>
 <a name="a2zcms" class="anchor" href="#a2zcms"><span class="octicon octicon-link"></span></a>A2ZCMS</h1>
 
-<p><img src="http://i44.tinypic.com/jgm6ht.jpg" alt="logo"></p>
+<p><img src="http://i44.tinypic.com/igi5uq.jpg" alt="logo"></p>
 
 <h1></h1>
 
